src/components/Nav.css
button {
    outline: none;
    background: none;
    color: inherit;
    font-family: inherit;
    width: inherit;
    height: inherit;
    border: none;
    cursor: pointer;
    font-size: 1rem;
}

.Navbar {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    position: fixed;
    width: 100%;
    height: 75px;
    padding: 1rem;
    backdrop-filter: blur(10px);
    color: #FFF;
    z-index: 1000;
}

.NavbarLinks {
    display: flex;
    gap: 2rem;
}


.NavbarLink {
    gap: 1rem;
    padding: 0 0.3rem;
    color: inherit;
    backdrop-filter: blur(10px);
}

.NavbarLink:hover {
    color: #88A4E6;
    border-radius: 1rem;
    transition: all 0.5s;
}


.NavbarBurger {
    width: 40px;
    height: 40px;
    background: transparent;
    border: none;
    color: inherit;
}

@media screen and (max-width: 1111px) {
    .NavbarLinks{
        flex-direction: column;
        justify-content: center;
        align-items: center;
        position: fixed;
        right: -100vw;
        bottom: 0;
        height: 100vh;
        padding: 2rem;
        visibility: hidden;
        z-index: 1000;
    }

    .showNav .NavbarLinks{
        width: 100vw;
        right: 0;
        visibility: visible;
        z-index: 1001;
        backdrop-filter: blur(10px);
    }

    .NavbarLink {
        display: block;
        padding: 1.5rem;
        font-size: 5vw;
        z-index: 1002;
    }

    .NavbarBurger {
        display: block;
        position: fixed;
        top: 1rem;
        right: 1rem;
        z-index: 1003;
        backdrop-filter: blur(10px);
    }

    .NavbarBurger:hover {
        cursor: pointer;
        border-radius: 100%;
        background-size: contain;
        backdrop-filter: blur(10px);
        transition: all .8s;
        z-index: 1004;
    }

    .BurgerBar,
    .BurgerBar::before,
    .BurgerBar::after {
        display: block;
        width: 40px;
        height: 3px;
        position: relative;
        border-radius: 3px;
        background: #FFF;
        transition: all .5s ease-in-out;
    }

    .BurgerBar::before,
    .BurgerBar::after {
        content: "";
        position: absolute;
        left: 0;
    }

    .BurgerBar::before {
        transform: translateY(-12px);
    }
    .BurgerBar::after {
        transform: translateY(12px);
    }

    .showNav .BurgerBar::before {
        transform: rotate(45deg);
    }

    .showNav .BurgerBar {
        background: transparent;
    }

    .showNav .BurgerBar::after {
        transform: rotate(-45deg);
    }
}

